--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -6,6 +8,55 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
-<body>
+<body class="bg-gray-50 text-gray-800 font-sans">
+
+    <nav class="bg-white shadow-md fixed w-full z-10 top-0">
+        <div class="max-w-6xl mx-auto px-4 flex justify-between items-center h-16">
+            <span class="text-xl font-bold text-blue-600">SKG.portfolio</span>
+            <div class="space-x-6 text-sm font-medium">
+                <a href="#about" class="hover:text-blue-600">About</a>
+                <a href="#certifications" class="hover:text-blue-600">Certifications</a>
+                <a href="#education" class="hover:text-blue-600">Education</a>
+                <a href="mailto:sg943831@gmail.com" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">Contact</a>
+            </div>
+        </div>
+    </nav>
+
+    <header id="about" class="pt-32 pb-20 bg-slate-900 text-white text-center">
+        <h1 class="text-4xl font-bold mb-2">Subham Kumar Gupta</h1>
+        <p class="text-blue-400 text-lg mb-6">Aspiring Cloud & AI Engineer</p>
+        <div class="max-w-2xl mx-auto px-4 italic text-gray-300">
+            "I enjoy solving real-world problems through technology, whether it's building scalable applications, automating workflows, or experimenting with new tools." [cite: 19]
+        </div>
+    </header>
+
+    <section id="certifications" class="py-16 max-w-5xl mx-auto px-4">
+        <h2 class="text-2xl font-bold text-center mb-10">Google Cloud Certifications</h2>
+        <div class="grid md:grid-cols-2 gap-4">
+            <div class="p-4 bg-white shadow rounded border-l-4 border-blue-500">Develop Gen AI Apps with Gemini and Streamlit [cite: 14]</div>
+            <div class="p-4 bg-white shadow rounded border-l-4 border-blue-500">Prompt Design in Vertex AI [cite: 12]</div>
+            <div class="p-4 bg-white shadow rounded border-l-4 border-blue-500">Cloud Run Functions: 3 Ways [cite: 11]</div>
+            <div class="p-4 bg-white shadow rounded border-l-4 border-blue-500">Monitoring in Google Cloud [cite: 13]</div>
+            <div class="p-4 bg-white shadow rounded border-l-4 border-blue-500">Analyze Speech and Language with Google APIs [cite: 10]</div>
+        </div>
+    </section>
+
+    <section id="education" class="py-16 bg-gray-100">
+        <div class="max-w-4xl mx-auto px-4">
+            <h2 class="text-2xl font-bold text-center mb-10">Education</h2>
+            <div class="space-y-6">
+                <div class="bg-white p-6 rounded shadow">
+                    <h3 class="font-bold">St. Thomas' College of Engineering & Technology [cite: 16]</h3>
+                    <p class="text-blue-600">B.Tech | 2024 - 2028 [cite: 21]</p>
+                </div>
+                <div class="bg-white p-6 rounded shadow">
+                    <h3 class="font-bold">Rishra Vidyapith High school [cite: 22]</h3>
+                    <p>Higher Secondary, PCMB | Feb 2023 [cite: 23]</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="script.js"></script>
 </body>
+</html>
