--- a/index.html
+++ b/index.html
@@ -2,60 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Subham Kumar Gupta | Portfolio</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Subham Kumar Gupta</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
-<body class="bg-gray-50 text-gray-800 font-sans">
-
-    <nav class="bg-white shadow-md fixed w-full z-10 top-0">
-        <div class="max-w-6xl mx-auto px-4 flex justify-between items-center h-16">
-            <span class="text-xl font-bold text-blue-600">SKG.portfolio</span>
-            <div class="space-x-6 text-sm font-medium">
-                <a href="#about" class="hover:text-blue-600">About</a>
-                <a href="#certifications" class="hover:text-blue-600">Certifications</a>
-                <a href="#education" class="hover:text-blue-600">Education</a>
-                <a href="mailto:sg943831@gmail.com" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">Contact</a>
+<body>
+    <div class="container">
+        <nav>
+            <div class="logo">Subham.</div>
+            <div>
+                <a href="index.html">Home</a>
+                <a href="#work">Certifications</a>
+                <a href="mailto:sg943831@gmail.com">Contact</a>
             </div>
-        </div>
-    </nav>
+        </nav>
 
-    <header id="about" class="pt-32 pb-20 bg-slate-900 text-white text-center">
-        <h1 class="text-4xl font-bold mb-2">Subham Kumar Gupta</h1>
-        <p class="text-blue-400 text-lg mb-6">Aspiring Cloud & AI Engineer</p>
-        <div class="max-w-2xl mx-auto px-4 italic text-gray-300">
-            "I enjoy solving real-world problems through technology, whether it's building scalable applications, automating workflows, or experimenting with new tools." [cite: 19]
-        </div>
-    </header>
+        <section class="hero">
+            <h1>Hi. নমস্কার.</h1>
+            <p>I'm Subham Kumar Gupta, a student at St. Thomas' College of Engineering & Technology. I solve real-world problems through Cloud & AI.</p>
+        </section>
 
-    <section id="certifications" class="py-16 max-w-5xl mx-auto px-4">
-        <h2 class="text-2xl font-bold text-center mb-10">Google Cloud Certifications</h2>
-        <div class="grid md:grid-cols-2 gap-4">
-            <div class="p-4 bg-white shadow rounded border-l-4 border-blue-500">Develop Gen AI Apps with Gemini and Streamlit [cite: 14]</div>
-            <div class="p-4 bg-white shadow rounded border-l-4 border-blue-500">Prompt Design in Vertex AI [cite: 12]</div>
-            <div class="p-4 bg-white shadow rounded border-l-4 border-blue-500">Cloud Run Functions: 3 Ways [cite: 11]</div>
-            <div class="p-4 bg-white shadow rounded border-l-4 border-blue-500">Monitoring in Google Cloud [cite: 13]</div>
-            <div class="p-4 bg-white shadow rounded border-l-4 border-blue-500">Analyze Speech and Language with Google APIs [cite: 10]</div>
-        </div>
-    </section>
-
-    <section id="education" class="py-16 bg-gray-100">
-        <div class="max-w-4xl mx-auto px-4">
-            <h2 class="text-2xl font-bold text-center mb-10">Education</h2>
-            <div class="space-y-6">
-                <div class="bg-white p-6 rounded shadow">
-                    <h3 class="font-bold">St. Thomas' College of Engineering & Technology [cite: 16]</h3>
-                    <p class="text-blue-600">B.Tech | 2024 - 2028 [cite: 21]</p>
-                </div>
-                <div class="bg-white p-6 rounded shadow">
-                    <h3 class="font-bold">Rishra Vidyapith High school [cite: 22]</h3>
-                    <p>Higher Secondary, PCMB | Feb 2023 [cite: 23]</p>
-                </div>
+        <section id="work">
+            <h2 style="font-size: 0.9rem; text-transform: uppercase; color: #86868b; letter-spacing: 0.1em;">Verified Skills</h2>
+            <div class="grid">
+                <div class="card">Develop Gen AI Apps with Gemini</div>
+                <div class="card">Prompt Design in Vertex AI</div>
+                <div class="card">Cloud Run Functions: 3 Ways</div>
+                <div class="card">Monitoring in Google Cloud</div>
             </div>
-        </div>
-    </section>
+        </section>
+
+        <footer style="margin-top: 100px; padding-bottom: 50px; color: #86868b; font-size: 0.8rem;">
+            ©2025 Subham Kumar Gupta
+        </footer>
+    </div>
+</body>
+</html>
 
     <script src="script.js"></script>
 </body>
