--- a/index.html
+++ b/index.html
@@ -2,42 +2,61 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Subham Kumar Gupta</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Subham Kumar Gupta | Cloud & AI</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <nav>
             <div class="logo">Subham.</div>
-            <div>
-                <a href="index.html">Home</a>
+            <div class="nav-links">
+                <a href="#about">About</a>
                 <a href="#work">Certifications</a>
                 <a href="mailto:sg943831@gmail.com">Contact</a>
             </div>
         </nav>
 
-        <section class="hero">
-            <h1>Hi. নমস্কার.</h1>
-            <p>I'm Subham Kumar Gupta, a student at St. Thomas' College of Engineering & Technology. I solve real-world problems through Cloud & AI.</p>
-        </section>
+        <header id="about" class="hero">
+            <h1>Hi. নমস্কার. नमस्कार.</h1>
+            <p>I am a B.Tech student at <span>St. Thomas' College of Engineering & Technology</span>. I focus on solving real-world problems by building scalable applications and automating workflows.</p>
+        </header>
 
-        <section id="work">
-            <h2 style="font-size: 0.9rem; text-transform: uppercase; color: #86868b; letter-spacing: 0.1em;">Verified Skills</h2>
-            <div class="grid">
-                <div class="card">Develop Gen AI Apps with Gemini</div>
-                <div class="card">Prompt Design in Vertex AI</div>
-                <div class="card">Cloud Run Functions: 3 Ways</div>
-                <div class="card">Monitoring in Google Cloud</div>
+        <section id="work" class="section">
+            <h2 class="section-label">Industry Certifications</h2>
+            <div class="cert-grid">
+                <div class="cert-item">
+                    <h3>Develop Gen AI Apps with Gemini</h3>
+                    <p>Google Cloud & Streamlit [cite: 14]</p>
+                </div>
+                <div class="cert-item">
+                    <h3>Prompt Design in Vertex AI</h3>
+                    <p>Advanced LLM Implementation [cite: 12]</p>
+                </div>
+                <div class="cert-item">
+                    <h3>Cloud Run Functions: 3 Ways</h3>
+                    <p>Serverless Architecture [cite: 11]</p>
+                </div>
+                <div class="cert-item">
+                    <h3>Analyze Speech and Language</h3>
+                    <p>Google Cloud APIs [cite: 10]</p>
+                </div>
+                <div class="cert-item">
+                    <h3>Monitoring in Google Cloud</h3>
+                    <p>SRE & Infrastructure Health [cite: 13]</p>
+                </div>
             </div>
         </section>
 
-        <footer style="margin-top: 100px; padding-bottom: 50px; color: #86868b; font-size: 0.8rem;">
-            ©2025 Subham Kumar Gupta
+        <footer>
+            <div class="footer-links">
+                <a href="https://www.linkedin.com/in/subham-kumar-gupta06" target="_blank">LinkedIn</a>
+                <a href="https://github.com/subham2906" target="_blank">GitHub</a>
+                <a href="mailto:sg943831@gmail.com">Email</a>
+            </div>
+            <p>©2025 Subham Kumar Gupta</p>
         </footer>
     </div>
-</body>
-</html>
-
-    <script src="script.js"></script>
 </body>
 </html>
